--- a/notebook/numpy/NumPy Beginners/Getting Familiar with Commonly Used Functions.ipynb
+++ b/notebook/numpy/NumPy Beginners/Getting Familiar with Commonly Used Functions.ipynb
@@ -2,17 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "i2 = np.eye(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -22,18 +12,20 @@
        "       [0., 1.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "i2 = np.eye(2)\n",
     "i2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +55,7 @@
        "       360.  , 355.36, 355.76, 352.47, 346.67, 351.99])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +79,7 @@
        "       16188000., 19504300., 12718000., 16192700., 18138800., 16824200.])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,16 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vwap= np.average(c, weights=v) # This is same as np.sum(c * v) / np.sum(v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -116,27 +99,19 @@
        "350.5895493532009"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "vwap= np.average(c, weights=v) # This is same as np.sum(c * v) / np.sum(v)\n",
     "vwap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ca= np.average(c) # Same as np.mean(c) and same as  np.average(c, weights=np.ones(len(c)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -145,27 +120,19 @@
        "351.0376666666667"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "ca= np.average(c) # Same as np.mean(c) and same as  np.average(c, weights=np.ones(len(c)))\n",
     "ca"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = np.average(c, weights=np.arange(len(c)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -174,18 +141,19 @@
        "352.4283218390804"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "t = np.average(c, weights=np.arange(len(c)))\n",
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +171,7 @@
        "364.9"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +191,7 @@
        "333.53"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +211,7 @@
        "24.859999999999957"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +231,7 @@
        "24.859999999999957"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +251,7 @@
        "352.055"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,40 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "352.12"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "i_sorted_close = len(c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mi = i_sorted_close // 2 \n",
-    "if i_sorted_close % 2 == 0:\n",
-    "    m = (sorted_close[mi] + sorted_close[mi - 1]) /2\n",
-    "else:\n",
-    "    m = sorted_close[mi]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -345,18 +289,23 @@
        "352.055"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "mi = i_sorted_close // 2 \n",
+    "if i_sorted_close % 2 == 0:\n",
+    "    m = (sorted_close[mi] + sorted_close[mi - 1]) /2\n",
+    "else:\n",
+    "    m = sorted_close[mi]\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +314,7 @@
        "50.126517888888884"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -385,13 +334,87 @@
        "50.126517888888884"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.mean((c - c.mean()) ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00958048,  0.01682777, -0.00205779, -0.00255576,  0.00890985,\n",
+       "        0.0155267 ,  0.00943503,  0.00833333, -0.01010721,  0.00651548,\n",
+       "        0.00652935,  0.00200457,  0.00897472, -0.01330102, -0.02160201,\n",
+       "       -0.03408832,  0.01184253,  0.00075886,  0.01539897,  0.01450483,\n",
+       "       -0.01104159,  0.00804443,  0.02112916,  0.00122372, -0.01288889,\n",
+       "        0.00112562, -0.00924781, -0.0164553 ,  0.01534601])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns = np.diff(c) / c[:-1]\n",
+    "returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00953488,  0.01668775, -0.00205991, -0.00255903,  0.00887039,\n",
+       "        0.01540739,  0.0093908 ,  0.0082988 , -0.01015864,  0.00649435,\n",
+       "        0.00650813,  0.00200256,  0.00893468, -0.01339027, -0.02183875,\n",
+       "       -0.03468287,  0.01177296,  0.00075857,  0.01528161,  0.01440064,\n",
+       "       -0.011103  ,  0.00801225,  0.02090904,  0.00122297, -0.01297267,\n",
+       "        0.00112499, -0.00929083, -0.01659219,  0.01522945])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logreturns = np.diff(np.log(c))\n",
+    "logreturns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0,  1,  4,  5,  6,  7,  9, 10, 11, 12, 16, 17, 18, 19, 21, 22, 23,\n",
+       "        25, 28], dtype=int64),)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "postindices = np.where(returns > 0)\n",
+    "postindices"
    ]
   },
   {
