--- a/notebook/numpy/NumPy Beginners Guide - 3 Edition/Getting Familiar with Commonly Used Functions.ipynb
+++ b/notebook/numpy/NumPy Beginners Guide - 3 Edition/Getting Familiar with Commonly Used Functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "       [0., 1.]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "       360.  , 355.36, 355.76, 352.47, 346.67, 351.99])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "       16188000., 19504300., 12718000., 16192700., 18138800., 16824200.])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "350.5895493532009"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "351.0376666666667"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "352.4283218390804"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "364.9"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "333.53"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "24.859999999999957"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "24.859999999999957"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "352.055"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "352.055"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "50.126517888888884"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "50.126517888888884"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "        0.00112562, -0.00924781, -0.0164553 ,  0.01534601])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "        0.00112499, -0.00929083, -0.01659219,  0.01522945])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,17 +397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array([ 0,  1,  4,  5,  6,  7,  9, 10, 11, 12, 16, 17, 18, 19, 21, 22, 23,\n",
-       "        25, 28], dtype=int64),)"
+       "        25, 28]),)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,6 +415,153 @@
    "source": [
     "postindices = np.where(returns > 0)\n",
     "postindices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.99046512, 0.98331225, 1.00205991, 1.00255903, 0.99112961,\n",
+       "       0.98459261, 0.9906092 , 0.9917012 , 1.01015864, 0.99350565,\n",
+       "       0.99349187, 0.99799744, 0.99106532, 1.01339027, 1.02183875,\n",
+       "       1.03468287, 0.98822704, 0.99924143, 0.98471839, 0.98559936,\n",
+       "       1.011103  , 0.99198775, 0.97909096, 0.99877703, 1.01297267,\n",
+       "       0.99887501, 1.00929083, 1.01659219, 0.98477055])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - logreturns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9983234381297623"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import gmean\n",
+    "gmean(1 - logreturns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "129.27478991115132\n"
+     ]
+    }
+   ],
+   "source": [
+    "annual_volatility = np.std(logreturns)/np.mean(logreturns)\n",
+    "annual_volatility = annual_volatility / np.sqrt(1./252.)\n",
+    "print(annual_volatility)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4. 0. 1. 2. 3. 4. 0. 1. 2. 3. 4. 0. 1. 2. 3. 4. 1. 2. 3. 4. 0. 1. 2. 3.\n",
+      " 4. 0. 1. 2. 3. 4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "def datestr2num(s):\n",
+    "    try:\n",
+    "        return datetime.datetime.strptime(s.decode(\"utf-8\"), \"%d-%m-%Y\").date().weekday()\n",
+    "    except:\n",
+    "        return datetime.datetime.strptime(s.decode(\"utf-8\"), \"%d/%m/%Y\").date().weekday()\n",
+    "dates, close=np.loadtxt('data.csv', delimiter=',',  converters={1: datestr2num}, usecols=(1,6), unpack=True)\n",
+    "print(dates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Day 0 prices [[339.32 351.88 359.18 353.21 355.36]] Average 351.7900000000001\n",
+      "Day 1 prices [[345.03 355.2  359.9  338.61 349.31 355.76]] Average 350.63500000000005\n",
+      "Day 2 prices [[344.32 358.16 363.13 342.62 352.12 352.47]] Average 352.1366666666666\n",
+      "Day 3 prices [[343.44 354.54 358.3  342.88 359.56 346.67]] Average 350.8983333333333\n",
+      "Day 4 prices [[336.1  346.5  356.85 350.56 348.16 360.   351.99]] Average 350.0228571428571\n"
+     ]
+    }
+   ],
+   "source": [
+    "averages = np.zeros(5)\n",
+    "for i in range(5):\n",
+    "    indices = np.where(dates == i)\n",
+    "    prices = np.take(close, indices)\n",
+    "    avg = np.mean(prices)\n",
+    "    print(\"Day\", i, \"prices\", prices, \"Average\", avg)\n",
+    "    averages[i] = avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0\n",
+       "0.0    351.790000\n",
+       "1.0    350.635000\n",
+       "2.0    352.136667\n",
+       "3.0    350.898333\n",
+       "4.0    350.022857\n",
+       "Name: 1, dtype: float64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can do the samething with pandas\n",
+    "dc = np.hstack((dates.reshape(len(dates), 1), close.reshape(len(close), 1)))\n",
+    "import pandas as pd\n",
+    "ds = pd.DataFrame(data=dc)\n",
+    "ds.groupby(0)[1].mean()"
    ]
   },
   {
@@ -441,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
