--- a/notebook/numpy/NumPy Beginners Guide - 3 Edition/Getting Familiar with Commonly Used Functions.ipynb
+++ b/notebook/numpy/NumPy Beginners Guide - 3 Edition/Getting Familiar with Commonly Used Functions.ipynb
@@ -566,6 +566,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first Monday index is 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_monday = np.ravel(np.where(dates == 0))[0]\n",
+    "print(\"The first Monday index is\", first_monday)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The second last Friday index is 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "last_friday = np.ravel(np.where(dates == 4))[-2]\n",
+    "print(\"The second last Friday index is\", last_friday)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weeks indices initial [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weeks_indices = np.arange(first_monday, last_friday + 1)\n",
+    "print(\"Weeks indices initial\", weeks_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weeks indices after split [array([1, 2, 3, 4, 5, 6, 7, 8]), array([ 9, 10, 11, 12, 13, 14, 15, 16]), array([17, 18, 19, 20, 21, 22, 23, 24])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weeks_indices = np.split(weeks_indices, 3)\n",
+    "print(\"Weeks indices after split\", weeks_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def datestr2num(s):\n",
+    "    try:\n",
+    "        return datetime.datetime.strptime(s.decode(\"utf-8\"), \"%d-%m-%Y\").date().weekday()\n",
+    "    except:\n",
+    "        return datetime.datetime.strptime(s.decode(\"utf-8\"), \"%d/%m/%Y\").date().weekday()\n",
+    "\n",
+    "dates, open, high, low, close=np.loadtxt('data.csv', delimiter=',', usecols=(1, 3, 4, 5, 6), converters={1: datestr2num}, unpack=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close = close[:16]\n",
+    "dates = dates[:16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first Monday index is 1\n",
+      "The last Friday index is 15\n",
+      "Weeks indices initial [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "Weeks indices after split [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_monday = np.ravel(np.where(dates == 0))[0]\n",
+    "print(\"The first Monday index is\", first_monday)\n",
+    "last_friday = np.ravel(np.where(dates == 4))[-1]\n",
+    "print(\"The last Friday index is\", last_friday)\n",
+    "weeks_indices = np.arange(first_monday, last_friday + 1)\n",
+    "print(\"Weeks indices initial\", weeks_indices)\n",
+    "print(\"Weeks indices after split\", weeks_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AxisError",
+     "evalue": "axis 1 is out of bounds for array of dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-110-7d47aa904f3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m            return(\"APPL\", monday_open, week_high,\n\u001b[1;32m      7\u001b[0m              week_low, friday_close)\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mweeksummary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_along_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msummarize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweeks_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Week summary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweeksummary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/numpy/lib/shape_base.py\u001b[0m in \u001b[0;36mapply_along_axis\u001b[0;34m(func1d, axis, arr, *args, **kwargs)\u001b[0m\n\u001b[1;32m    339\u001b[0m     \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0masanyarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    340\u001b[0m     \u001b[0mnd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 341\u001b[0;31m     \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnormalize_axis_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    342\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    343\u001b[0m     \u001b[0;31m# arr, with the iteration axis at the end\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
+     ]
+    }
+   ],
+   "source": [
+    "def summarize(a, o, h, l, c):\n",
+    "   monday_open = o[a[0]]\n",
+    "   week_high = np.max( np.take(h, a) )\n",
+    "   week_low = np.min( np.take(l, a) )\n",
+    "   friday_close = c[a[-1]]\n",
+    "   return(\"APPL\", monday_open, week_high,\n",
+    "     week_low, friday_close)\n",
+    "weeksummary = np.apply_along_axis(summarize, 1, weeks_indices, open, high, low, close)\n",
+    "print(\"Week summary\", weeksummary)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
