--- a/notebook/pandas/Learning pandas/The Pandas DataFrame Object.ipynb
+++ b/notebook/pandas/Learning pandas/The Pandas DataFrame Object.ipynb
@@ -123,6 +123,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   c1  c2\n",
+       "0  10  11\n",
+       "1  20  21"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rename the columens\n",
+    "df.columns = ['c1', 'c2']\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    c1  c2\n",
+       "r1   0   1\n",
+       "r2   2   3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(np.array([[0, 1], [2, 3]]), columns=['c1', 'c2'], index=['r1', 'r2'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['r1', 'r2'], dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   c1  c2\n",
+       "0   1   6\n",
+       "1   2   7\n",
+       "2   3   8\n",
+       "3   4   9\n",
+       "4   5  10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = pd.Series(np.arange(1, 6, 1))\n",
+    "s2 = pd.Series(np.arange(6, 11, 1))\n",
+    "pd.DataFrame({'c1': s1, 'c2': s2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   c1  c2    c3\n",
+       "0   1   6   NaN\n",
+       "1   2   7  12.0\n",
+       "2   3   8  13.0\n",
+       "3   4   9   NaN\n",
+       "4   5  10   NaN"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3 = pd.Series(np.arange(12, 14), index=[1,2])\n",
+    "pd.DataFrame({'c1': s1, 'c2': s2, 'c3': s3})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
